fix(aio): api list column overflow fix (#17300)

--- a/aio/src/styles/2-modules/_api-list.scss
+++ b/aio/src/styles/2-modules/_api-list.scss
@@ -165,21 +165,22 @@ $tablet-breakpoint: 800px;
 
 .docs-content .api-list {
   list-style: none;
-  margin: 0 0 48px 0;
+  margin: 0 0 48px -8px;
   padding: 0;
   overflow: hidden;
 
   @media screen and (max-width: 600px) {
-        margin: 0;
+        margin: 0 0 0 -8px;
     }
 
   li {
     font-size: 14px;
-    margin: 0 0 16px 0;
+    margin: 8px;
     line-height: 14px;
     padding: 0;
     float: left;
     width: 33%;
+    overflow: hidden;
     min-width: 220px;
     text-overflow: ellipsis;
     white-space: nowrap;
